--- a/MIS/Views/Home/Index.cshtml
+++ b/MIS/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="records-header">
+﻿@*<div class="records-header">
     <div class="btn-police dropdown">
         <a id="dropdownMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-button dropdown-toggle">Records</a>
         <ul aria-labelledby="dropdownMenu1" class="dropdown-menu border-0 shadow">
@@ -124,6 +124,6 @@
     }))
 
   
-</script>
+</script>*@
 
 
