--- a/MIS/Views/Meeting/Index.cshtml
+++ b/MIS/Views/Meeting/Index.cshtml
@@ -224,7 +224,7 @@
                     var join = "";
                     var meetingTime = convertFromJsonToDate(data[i].start, data[i].end);
                     
-                    if (meetingTime.start.getHours() >= @DateTime.Now.Hour && @DateTime.Now.Hour <= meetingTime.end.getHours() && meetingTime.start.getDate() == @DateTime.Now.Day) {
+                    if (meetingTime.start.getHours() <= @DateTime.Now.Hour && @DateTime.Now.Hour <= meetingTime.end.getHours() && meetingTime.start.getDate() == @DateTime.Now.Day) {
                         join = ` <a href="Meeting/Chat?id=${data[i].id}"  class="btn meeting-join meeting-started">
                         <i class="bi bi-box-arrow-in-right"></i>
                         Join
