--- a/MIS/Views/Shared/_Layout.cshtml
+++ b/MIS/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
 ﻿<!DOCTYPE html>
+@using Microsoft.AspNetCore.Identity
+@inject UserManager<IdentityUser> userManager
+@inject SignInManager<IdentityUser> signInManager;
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -28,19 +31,40 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PoliceSection" asp-action="Index">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Policeman" asp-action="Index">Policemen</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="MeetingRequest" asp-action="Index" asp-area=""
-                               data-toggle="modal" data-ajax-update="#requestsBody" data-target="#requestsModal" data-ajax="true">  Requests</a>
-                        </li>
+                        @if (signInManager.IsSignedIn(User))
+                        {
+                            @if (userManager.IsInRoleAsync(userManager.GetUserAsync(User).GetAwaiter().GetResult(), "Admin").GetAwaiter().GetResult())
+                            {
+
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="PoliceSection" asp-action="Index">Stations</a>
+                                </li>
+                            }
+                            @if (userManager.IsInRoleAsync(userManager.GetUserAsync(User).GetAwaiter().GetResult(), "Admin").GetAwaiter().GetResult())
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Policeman" asp-action="Index">Policemen</a>
+                                </li>
+                            }
+                            @if (userManager.IsInRoleAsync(userManager.GetUserAsync(User).GetAwaiter().GetResult(), "Admin").GetAwaiter().GetResult())
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="MeetingRequest" asp-action="Index" asp-area=""
+                                       data-toggle="modal" data-ajax-update="#requestsBody" data-target="#requestsModal" data-ajax="true">  Requests</a>
+                                </li>
+                            }
+                            @if (userManager.IsInRoleAsync(userManager.GetUserAsync(User).GetAwaiter().GetResult(), "Policeman").GetAwaiter().GetResult())
+                            {
+
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="CriminalRecord" asp-action="Index" asp-area="">Records</a>
+                                </li>
+                            }
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Meeting" asp-action="Index" asp-area="">Meetings</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -64,7 +88,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
- 
+
     <div class="modal fade" id="requestsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -75,9 +99,9 @@
                     </button>
                 </div>
                 <div class="modal-body" id="requestsBody">
-                    
+
                 </div>
-               
+
             </div>
         </div>
     </div>
