--- a/MIS/wwwroot/css/recordDetails.css
+++ b/MIS/wwwroot/css/recordDetails.css
@@ -112,6 +112,7 @@
     width: 100%;
     height: 60%;
     object-fit: cover;
+    cursor : pointer;
 }
 
 .record-document-info {
@@ -122,6 +123,7 @@
     display: flex;
     align-items : center;
     justify-content: space-between;
+
 }
 
 .record-document-name{
@@ -149,6 +151,15 @@
 .record-document-delete:hover{
     color : #fff;
 }
+
+
+.add-policeman-form{
+    margin-top : 20px;
+}
+
+
+
+
 
 ::-webkit-scrollbar {
     width: 7px;
