--- a/MIS/Views/PoliceSection/Hierarchy.cshtml
+++ b/MIS/Views/PoliceSection/Hierarchy.cshtml
@@ -11,7 +11,7 @@
         width: 500px;
     }
 
-    span 
+    #normalSpan 
      {
         border: 2px solid #fff !important;
         border-radius: 4px;
@@ -130,7 +130,6 @@
                 <span class="record-name"><i class="fas fa-signature"></i> name : <span>@record.Name</span></span>
                 <span class="record-date"><i class="far fa-clock"></i> date : <span> @record.CreatedOn</span></span>
                 <div class="record-options">
-
                 </div>
             </div>
 
