--- a/MIS/Views/Policeman/_EditPoliceman.cshtml
+++ b/MIS/Views/Policeman/_EditPoliceman.cshtml
@@ -10,7 +10,7 @@
 </div>
 <div class="form-group">
     <label for="Type">Email</label>
-    <input type="text" class="form-control" id="editPolicemanEmail" placeholder="Type" name="Type">
+    <input type="text" class="form-control" id="editPolicemanEmail" placeholder="Email" name="Email">
 </div>
 
 @*<div class="form-group">
