--- a/MIS/Views/Home/Index.cshtml
+++ b/MIS/Views/Home/Index.cshtml
@@ -1,129 +1,8 @@
-﻿@*<div class="records-header">
-    <div class="btn-police dropdown">
-        <a id="dropdownMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-button dropdown-toggle">Records</a>
-        <ul aria-labelledby="dropdownMenu1" class="dropdown-menu border-0 shadow">
-            <li><a href="#" class="dropdown-item" data-toggle="modal" data-target="#addRecord">Add </a></li>
-            <li><a href="#" class="dropdown-item">Search</a></li>
-
-            <li class="dropdown-divider"></li>
-
-            <li class="dropdown-submenu">
-                <a id="dropdownMenu2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-item dropdown-toggle" style="cursor:pointer">Status </a>
-                <ul aria-labelledby="dropdownMenu2" class="dropdown-menu border-0 shadow">
-
-                    <li><a href="#" class="dropdown-item">Active</a></li>
-                    <li><a href="#" class="dropdown-item">Closed</a></li>
-                </ul>
-            </li>
-        </ul>
+﻿<div id="photoDiv" class="ml-lg-5 mt-lg-5  ">
+    <div class="imgClass d-flex justify-content-center" >
+        <img src="~/Images/cartoon-flat-funny-british-policeman-character-blue-helmet-hat-uniform-boy-shaking-hands-showing-welcome-gesture_109998-1587.jpg" height="300" width="400" style="display:inline-block" />
     </div>
-    <div class="search"> <input type="text" class="search-input" placeholder="Search..." name=""> <a href="#" class="search-icon"> <i class="fa fa-search"></i> </a> </div>
-</div>
-
-<div class="records-container">
-
-    <div class="record">
-        <i class="fas fa-folder record-icon"></i>
-        <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
-        <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
-        <div class="record-options">
-            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
-            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
-        </div>
-    </div>
-    <div class="record">
-        <i class="fas fa-folder record-icon"></i>
-        <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
-        <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
-        <div class="record-options">
-            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
-            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
-        </div>
-    </div>
-    <div class="record">
-        <i class="fas fa-folder record-icon"></i>
-        <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
-        <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
-        <div class="record-options">
-            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
-            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
-        </div>
-    </div>
-    <div class="record">
-        <i class="fas fa-folder record-icon"></i>
-        <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
-        <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
-        <div class="record-options">
-            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
-            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
-        </div>
-    </div> <div class="record">
-        <i class="fas fa-folder record-icon"></i>
-        <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
-        <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
-        <div class="record-options">
-            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
-            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
-        </div>
-    </div> <div class="record">
-        <i class="fas fa-folder record-icon"></i>
-        <span class="record-name"><i class="fas fa-signature"></i> Name : <span>Pablo Escobar </span></span>
-        <span class="record-date"><i class="far fa-clock"></i> Date : 23/11/1982</span>
-        <div class="record-options">
-            <button class="btn btn-record-edit"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</button>
-            <button class="btn btn-record-delete"><i class="fas fa-trash" style="font-size : 12px;"></i> Delete</button>
-        </div>
-    </div>
-
-</div>
-
-<div class="modal fade" id="addRecord" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-body">
-                <form asp-controller="" asp-action="">
-                    <div class="form-group">
-                        <label for="Name">Name</label>
-                        <input type="text" class="form-control" id="Name" placeholder="Name">
-                    </div>
-                    <div class="form-group">
-                        <label for="Type">Type</label>
-                        <input type="text" class="form-control" id="Type" placeholder="Type">
-                    </div>
-                    <div class="form-group">
-                        <label for="Description">Description</label>
-                        <textarea class="form-control" id="Description" rows="3"></textarea>
-                    </div>
-                    <button class="btn btn-police btn-police-rounded">Submit</button>
-                </form>
-            </div>
-
-        </div>
+    <div class=" d-flex justify-content-center mt-lg-5 ">
+        <h4 style="font-style:oblique;color:darkblue">Welcome to Management Informational System!</h4>
     </div>
 </div>
-<script>
-    $(document).ready($(function () {
-        // ------------------------------------------------------- //
-        // Multi Level dropdowns
-        // ------------------------------------------------------ //
-        $("ul.dropdown-menu [data-toggle='dropdown']").on("click", function (event) {
-            event.preventDefault();
-            event.stopPropagation();
-
-            $(this).siblings().toggleClass("show");
-
-
-            if (!$(this).next().hasClass('show')) {
-                $(this).parents('.dropdown-menu').first().find('.show').removeClass("show");
-            }
-            $(this).parents('li.nav-item.dropdown.show').on('hidden.bs.dropdown', function (e) {
-                $('.dropdown-submenu .show').removeClass("show");
-            });
-
-        });
-    }))
-
-  
-</script>*@
-
-
