--- a/MIS/Views/CriminalRecord/Index.cshtml
+++ b/MIS/Views/CriminalRecord/Index.cshtml
@@ -70,6 +70,18 @@
     </div>
 
     <div class="d-inline-flex p-md-5">
+        <form asp-controller="CriminalRecord" asp-action="Index" method="get" id="searchFormAdmin">
+            <div class="search">
+                <input type="search" class="search-input" placeholder="Policeman..." name="Term">
+                <input type="hidden" class="search-input" placeholder="Policeman..." name="Name" value="policemanName">
+                <button type="submit" class="search-icon" value="Filter">
+                    <i class="fa fa-search"> </i>
+                </button>
+            </div>
+        </form>
+    </div>
+
+    <div class="d-inline-flex p-md-5">
         <form asp-controller="CriminalRecord" asp-action="Index" method="get" id="searchForm" style="display:none">
             <div class="search">
                 <input type="search" class="search-input" placeholder="Search..." name="Term">
