--- a/MIS/Views/PoliceSection/Hierarchy.cshtml
+++ b/MIS/Views/PoliceSection/Hierarchy.cshtml
@@ -11,7 +11,7 @@
         width: 500px;
     }
 
-    #normalSpan 
+    span 
      {
         border: 2px solid #fff !important;
         border-radius: 4px;
@@ -127,8 +127,8 @@
         {
             <div class="record">
                 <i class="fas fa-folder record-icon" onclick="next('@record.Id')"></i>
-                <span class="record-name"><i class="fas fa-signature"></i> name : <span>@record.Name</span></span>
-                <span class="record-date"><i class="far fa-clock"></i> date : <span> @record.CreatedOn</span></span>
+                <i class="record-name"><i class="fas fa-signature"></i> name : <i>@record.Name</i></i>
+                <i class="record-date"><i class="far fa-clock"></i> date : <i> @record.CreatedOn</i></i>
                 <div class="record-options">
                 </div>
             </div>
