--- a/MIS/Views/Policeman/_EditPoliceman.cshtml
+++ b/MIS/Views/Policeman/_EditPoliceman.cshtml
@@ -3,7 +3,7 @@
 *@
 @{
 }
-<input type="hidden" name="Id" id="editPoliceman" />
+<input type="hidden" name="Id" id="editPolicemanId" />
 <div class="form-group">
     <label for="Name">Name</label>
     <input type="text" class="form-control" id="editPolicemanName" placeholder="Name" name="Name">
