--- a/MIS/Views/PoliceSection/Hierarchy.cshtml
+++ b/MIS/Views/PoliceSection/Hierarchy.cshtml
@@ -28,7 +28,7 @@
     }
 </style>
 
-<form>
+<form asp-controller="PoliceSection" asp-action="AddPolicemanToStation">
     <div class="row">
         <div class="input-group col">
             <input type="hidden" name="id" value="@Model.Id" />
