--- a/MIS/Views/Policeman/Index.cshtml
+++ b/MIS/Views/Policeman/Index.cshtml
@@ -97,7 +97,7 @@
     //}
 
     function loadEditModal(id, name, email) {
-        $("#editPolicemanId").val(id)
+        $("#editPolicemanID").val(id)
         $("#editPolicemanName").val(name)
         $("#editPolicemanEmail").val(email)
         $('#editPoliceman').modal('show');
