--- a/MIS/Views/PoliceSection/Index.cshtml
+++ b/MIS/Views/PoliceSection/Index.cshtml
@@ -94,7 +94,7 @@
 
 
 
-<div class="modal fade" id="editPoliceStation" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!--<div class="modal fade" id="editPoliceStation" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body">
@@ -116,24 +116,24 @@
                             <div class="col-4">
                                 <input type="text" class="form-control" id="Number" placeholder="Number" name="Address.Number">
                             </div>
-                        </div>
+                        </div>-->
                         @*<input type="text" class="form-control" id="editPoliceSectionAddress" placeholder="Type" name="Type">*@
-                    </div>
+                    <!--</div>
                     <div class="form-group">
                         <label for="Policemen">Policemen</label>
                         <input type="text" class="form-control" id="editPoliceSectionPolicemen" placeholder="Policemen" name="Policemen.Count">
-                    </div>
+                    </div>-->
 
                     @*<div class="form-group">
             <label for="Description">Description</label>
             <textarea class="form-control" id="editRecordDescription" rows="3" placeholder="Description.." name="Description"></textarea>
         </div>*@
-                    <button class="btn btn-police btn-police-rounded">Update</button>
+                    <!--<button class="btn btn-police btn-police-rounded">Update</button>
                 </form>
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
 
 
