--- a/MIS/Views/Policeman/_EditPoliceman.cshtml
+++ b/MIS/Views/Policeman/_EditPoliceman.cshtml
@@ -3,11 +3,12 @@
 *@
 @{
 }
-<input type="hidden" name="Id" id="editPoliceman" />
+<input type="hidden" name="Id" id="editPolicemanID" />
 <div class="form-group">
     <label for="Name">Name</label>
     <input type="text" class="form-control" id="editPolicemanName" placeholder="Name" name="Name">
 </div>
+
 <div class="form-group">
     <label for="Type">Email</label>
     <input type="text" class="form-control" id="editPolicemanEmail" placeholder="Email" name="Email">
